Move sidebar; correct minor css issues; correct menu on mobile

--- a/public/content/themes/ubti/static/src/scss/main.scss
+++ b/public/content/themes/ubti/static/src/scss/main.scss
@@ -1,1 +1,2 @@
 @import "old/style";
+@media (min-width:768px) {ul#menu-main_menu.collapse, ul#menu-main_menu.collapse.in {display:block !important;height:auto !important}.col-md-9.page-content {float:right}}
